assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');

/* Navbar */
.navbar {
    background-color: #ffdc00;
    font-family: "Roboto", serif;
    font-size: larger;
    font-weight: 300;
}

.navbar a,
.navbar a:hover,
.navbar a:active {
    color: var(--clr-white);
}

.navbar a:hover {
    text-decoration: underline;
}

.navbar img {
    display:inline-block;
    max-height: 4rem;
    margin-right: 0.5rem;
}

.nav-text {
    color: var(--clr-white);
    font-weight: 500;
}

/* Index Page */
.bg-wild {
    background-color: #1b0132;
    border-style: solid;
    border-color: #ffdc00;
}

.main-heading {
    color: #1b0132;
}

.nav-item {
    margin-right: 1rem;
    color: #1b0132;
}

body {
    font-family: 'Roboto', serif;
    background-color: #1b0132;
}

/* Carousel */

 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     display: block;
     max-width: 100%;
     height: 400px !important;
 }

/* Footer */
.footer {
    background-color: #ffdc00;
    position: fixed;
    left: 0px;
    bottom: 0px;
    height: 30px;
    width: 100%;
    color: #1b0132;
}

.copyright {
    width: 49%;
    float: left;
    display: inline;
}

#socialmedia {
    width: 45%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    list-style-type: none;
}

#socialmedia i {
    font-size: 120%;
    padding: 25%;
    color: #1b0132;
}

